kustomize/overlays/uat/deployment_uat_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oim-cms-deployment
  labels:
    app: oim-cms-uat
spec:
  selector:
    matchLabels:
      app: oim-cms-uat
  template:
    metadata:
      labels:
        app: oim-cms-uat
    spec:
      containers:
      - name: oim-cms
        image: ghcr.io/dbca-wa/oim-cms:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /app/media
          name: oim-cms-media-uat
      volumes:
      - name: oim-cms-media-uat
        persistentVolumeClaim:
          claimName: oim-cms-media-pvc-uat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oim-cms-nginx
  labels:
    app: oim-cms-nginx-uat
spec:
  selector:
    matchLabels:
      app: oim-cms-nginx-uat
  template:
    metadata:
      labels:
        app: oim-cms-nginx-uat
    spec:
      containers:
      - name: oim-cms-nginx
        volumeMounts:
        - name: oim-cms-media-uat
          mountPath: /usr/share/nginx/html/media
          readOnly: true
        - name: nginx-conf-uat
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: oim-cms-media-uat
        persistentVolumeClaim:
          claimName: oim-cms-media-pvc-uat
      - name: nginx-conf-uat
        configMap:
          name: nginx-conf-uat
          items:
            - key: nginx.conf
              path: nginx.conf
